new file:   assets/Ramen Sitemap.png 	modified:   index.html 	modified:   sitemap.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
     <header class="navbar">
         <nav>
-            <div class="logo-wrapper">
+            <!--<div class="logo-wrapper">
                 <a  href=home.html><img  class="logo" src="assets/logo.png" alt="RAM(e)N logo with chopsticks and noodles"/></a>
-            </div>
+            </div>-->
+
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="movie.html">Movies</a></li>
@@ -28,8 +29,15 @@
                 <li><a href="about.html">Student Details</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+
         </nav>
     </header>
+    
+    <!-- SECTION SITEMAP-->
+    <div class="sitemap">
+        <img src="assets/Ramen Sitemap.png"/>
+    </div>
+
     <section class="gallery">
         <div class="card">
             <img
