modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <header class="navbar">
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="movie.html">Movies</a></li>
-            <li><a href="tv.html">TV Shows</a></li>
-            <li><a href="books.html">Books</a></li>
-            <li><a href="places.html">Places</a></li>
-            <li><a href="food.html">Food</a></li>
-            <li><a href="sitemap.html">Sitemap</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="about.html">Student Details</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/movie.html">Movies</a></li>
+            <li><a href="/tv.html">TV Shows</a></li>
+            <li><a href="/books.html">Books</a></li>
+            <li><a href="/places.html">Places</a></li>
+            <li><a href="/food.html">Food</a></li>
+            <li><a href="/sitemap.html">Sitemap</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/about.html">Student Details</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </header>
     
@@ -31,12 +31,17 @@
         <img src="assets/Ramen Sitemap.png" usemap="#image-map">
 
         <map name="image-map">
-            <area target="_self" alt="Home" title="Home" href="/home" coords="531,227,137" shape="circle">
-            <area target="_self" alt="Movies" title="Movies" href="/link1" coords="6,511,107,544" shape="rect">
-            <area target="_self" alt="TV" title="TV" href="/link2" coords="119,567,231,602" shape="rect">
-            <area target="" alt="Books" title="Books" href="/link3" coords="260,570,365,601" shape="rect">
-            <area target="" alt="Music" title="Music" href="/link4" coords="341,509,447,543" shape="rect">
+            <area target="" alt="Home" title="Home" href="/index.html" coords="531,227,137" shape="circle">
+            <area target="" alt="Movies" title="Movies" href="/movie.html" coords="6,511,107,544" shape="rect">
+            <area target="" alt="TV" title="TV" href="/tv.html" coords="119,567,231,602" shape="rect">
+            <area target="" alt="Books" title="Books" href="/books.html" coords="260,570,365,601" shape="rect">
+            <area target="" alt="Music" title="Music" href="/music.html" coords="341,509,447,543" shape="rect">
+            <area target="" alt="Buy" title="Buy" href="/buy" coords="544,512,651,545" shape="rect">
+            <area target="" alt="Quiz" title="Quiz" href="/quiz" coords="637,571,746,602" shape="rect">
+            <area target="" alt="Comments" title="Comments" href="/comments" coords="782,571,900,602" shape="rect">
+            <area target="" alt="Details" title="Details" href="/details" coords="897,512,1002,544" shape="rect">
         </map>
+
     </div>
 
     <section class="gallery">
